package com.peanut.design.pattern.factory;

public abstract class Pizza {

    abstract void prepare();
    abstract void make();
    abstract void pack();

}
